style(legacy): apply launcher context fixes on mobile

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -1172,6 +1172,14 @@ body:not(.mobile) #launcher-pane.horizontal .dropdown-submenu > .dropdown-menu {
     background-color: var(--launcher-pane-background-color);
 }
 
+body.mobile #launcher-pane .dropdown-menu.show {
+    position: fixed !important;
+    top: var(--launcher-pane-size) !important;
+    left: 0 !important;
+    right: 0 !important;
+    transform: unset !important;
+}
+
 #right-pane {
     overflow: auto;
 }
